--- a/VoucherManagementSystem/Views/Home/Index.cshtml
+++ b/VoucherManagementSystem/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
             <div class="col">
                 <div class="text-white-50 text-uppercase small fw-bold" style="letter-spacing: 1px;">Total Capital</div>
                 <h2 class="text-white fw-bold mb-0" style="text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">Rs. @string.Format("{0:N0}", totalCapital)</h2>
-                <small class="text-white" style="opacity: 0.8;">Stock + Receivables + Cash + Bank - Payables</small>
+                <small class="text-white" style="opacity: 0.8;">Stock + Receivables + Cash + Bank - Payables - Expenses</small>
             </div>
             <div class="col-auto d-none d-md-block">
                 <div class="text-end">
