--- a/VoucherManagementSystem/Views/Users/Index.cshtml
+++ b/VoucherManagementSystem/Views/Users/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2><i class="bi bi-people-fill"></i> User Management</h2>
+    <h2></h2>
     <a asp-action="Create" class="btn btn-primary">
         <i class="bi bi-person-plus"></i> Add New User
     </a>
@@ -14,7 +14,7 @@
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-striped table-hover" id="usersTable">
-                <thead class="table-dark">
+                <thead>
                     <tr>
                         <th>Username</th>
                         <th>Full Name</th>
